# qvopenapi-rs

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  build_run.sh  run_example.sh  run_http.sh  run_http_win.sh
docker/: entrypoint.sh
examples/: Cargo.toml
examples/webserver/: main.rs
qvopenapi/: Cargo.toml  LICENSE.txt  build.rs
qvopenapi-async/: Cargo.toml
qvopenapi-async/examples/: connect_async.rs
qvopenapi-async/src/: client.rs  context.rs  lib.rs
qvopenapi-bindings/: Cargo.toml
qvopenapi-bindings/src/: lib.rs
qvopenapi-bindings/src/bindings/: bindings.h  mod.rs  trio_ord.h
qvopenapi-future/: Cargo.toml
qvopenapi-future/examples/: connect_future.rs
qvopenapi-future/src/: client.rs  context.rs  future.rs  lib.rs  request.rs
qvopenapi-future/src/query/: c8201.rs
qvopenapi-future/tests/: test.rs
qvopenapi-helper/: Cargo.toml
qvopenapi-helper/src/: lib.rs  window_mgr.rs
qvopenapi-http/: Cargo.toml
qvopenapi-http/src/: error.rs  main.rs  response.rs
qvopenapi-http/src/callback/: mod.rs
qvopenapi-http/src/routes/: connect.rs  connect_info.rs  disconnect.rs  mod.rs  query.rs
qvopenapi-macro/: Cargo.toml
qvopenapi-macro/src/: lib.rs
qvopenapi-mock/: Cargo.toml
qvopenapi-mock/src/: lib.rs
qvopenapi-sys/: Cargo.toml
qvopenapi-sys/src/: lib.rs
qvopenapi-webserver/: Cargo.toml
qvopenapi-webserver/src/: main.rs
qvopenapi/examples/: connect.rs
qvopenapi/src/: basic_structs.rs  client.rs  command.rs  error.rs  lib.rs  message.rs  public_structs.rs  request.rs  response.rs  window.rs  window_manager.rs  window_mgr.rs  wmca_lib.rs  wmcalib.rs
qvopenapi/src/bindings/: trio_inv.h
qvopenapi/src/models/: connect.rs  message.rs  mod.rs
qvopenapi/src/models/query/: c8201.rs  mod.rs
qvopenapi/src/query/: c8201.rs  mod.rs
qvopenapi/src/utils/: mod.rs
qvopenapi/src/window_mgr/: message_const.rs  mod.rs  window_mgr_mock.rs  window_mgr_win32.rs
scripts/: download_dll.sh  run_example.sh  run_example_async.sh  run_example_async_win.sh  run_example_future_win.sh  run_example_win.sh  run_http.sh  run_http_docker.sh  run_http_win.sh
src/: lib.rs
