[workspace]

members = [
    "qvopenapi",
    "qvopenapi-sys",
    "qvopenapi-http",
]

[workspace.dependencies]
libc = "0.2"
libloading = "0.8"
windows = {version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]}
windows-sys = {version = "0.48", features = [
    "Win32_Foundation",
]}
custom_error = "1.9.2"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
