[workspace]

members = [
    "qvopenapi",
    "qvopenapi-macro",
    "qvopenapi-future",
    "qvopenapi-http",
    "qvopenapi-sys",
]

[workspace.dependencies]
chrono = "0.4.24"
env_logger = "0.10.0"
libc = "0.2"
libloading = "0.8"
log = "0.4.17"
windows = {version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]}
windows-sys = {version = "0.48", features = [
    "Win32_Foundation",
]}
custom_error = "1.9.2"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.24.1"
strum_macros = "0.24.1"
