[package]
name = "qvopenapi-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
lazy_static = { workspace = true }
qvopenapi = { path = "../qvopenapi" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
rpassword = { workspace = true }
tokio = { workspace = true }

[features]
disable-unwind = [ "qvopenapi/disable-unwind" ]
