[package]
name = "qvopenapi-future"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qvopenapi = { path = "../qvopenapi" }
custom_error = { workspace = true }
libloading = { workspace = true }
windows = { workspace = true }
lazy_static = "1.4.0"
log = { workspace = true }
strum_macros = "0.24.3"

[features]
disable-unwind = ["qvopenapi/disable-unwind"]
