[package]
name = "qvopenapi-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
qvopenapi = { path = "../qvopenapi" }
tokio = { version = "1.28.0", features = ["full"] }

[features]
disable-unwind = [ "qvopenapi/disable-unwind" ]
