[package]
name = "qvopenapi-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
qvopenapi = { path = "../qvopenapi" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = "0.3.5"

[features]
disable-unwind = [ "qvopenapi/disable-unwind" ]
