[package]
name = "qvopenapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qvopenapi-sys = { path = "../qvopenapi-sys" }
custom_error = { workspace = true }
libloading = { workspace = true }
windows = { workspace = true }
lazy_static = "1.4.0"
once_cell = "1.17.1"
log = { workspace = true }
strum_macros = "0.24.3"
encoding = "0.2.33"
chrono = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[features]
disable-unwind = ["qvopenapi-sys/disable-unwind"]
