[package]
name = "qvopenapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qvopenapi-sys = { path = "../qvopenapi-sys" }
custom_error = { workspace = true }
libloading = { workspace = true }
lazy_static = { workspace = true }
once_cell = "1.17.1"
log = { workspace = true }
encoding = "0.2.33"
chrono = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
rpassword = { workspace = true }

[build-dependencies]
bindgen = "0.53.1"

[features]
disable-unwind = ["qvopenapi-sys/disable-unwind"]
