[package]
name = "qvopenapi"
version = "0.1.0"
edition = "2021"
description = "wmca.dll은 윈도우 이벤트 기반으로 동작하므로 윈도우 및 기반 이벤트들을 자동으로 관리하고 주요 Tx 들을 별도 메소드로 제공"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qvopenapi-bindings = { workspace = true }
qvopenapi-sys = { workspace = true }
custom_error = { workspace = true }
libloading = { workspace = true }
lazy_static = { workspace = true }
once_cell = "1.17.1"
log = { workspace = true }
encoding = "0.2.33"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
rpassword = { workspace = true }

[features]
disable-unwind = ["qvopenapi-sys/disable-unwind"]
